plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'ru.alfabank.practice.kagrishin'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation("org.springframework.boot:spring-boot-starter-data-mongodb")
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.mapstruct:mapstruct:1.6.3'

	compileOnly "org.projectlombok:lombok:1.18.38"

	annotationProcessor "org.projectlombok:lombok:1.18.38"
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

	testCompileOnly "org.projectlombok:lombok:1.18.38"
	testAnnotationProcessor "org.projectlombok:lombok:1.18.38"
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation "org.junit.jupiter:junit-jupiter:5.8.1"
	testImplementation "org.testcontainers:testcontainers:1.20.6"
	testImplementation "org.testcontainers:junit-jupiter:1.20.6"
	testImplementation "org.testcontainers:mongodb:1.20.6"
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
